@@ -7,6 +7,7 @@ Changes for Perl extension ADAMK-Repository
 	- Added command cache ADAMK::Cache
 	- Added class ADAMK::SVN::Info
 	- Moved ADAMK::LogEntry to ADAMK::SVN::Log
+	- Added integration with ORDB::CPANTesters
 
 0.10 Mon 20 Apr 2009
 	- Added function  ADAMK::Util::ljoin
